Wrong Camera Safe Areas: The default values of Title Safe Margins and Action Safe Margins replace each other #59536

Closed
opened 2018-12-18 06:00:50 +01:00 by Shinsuke Irie · 5 comments
Member

System Information
Operating system: Ubuntu 18.10
Graphics card: Geforce GTX 1070

Blender Version
Broken: 2.79b release and 2.80 afc4cd1e67

Short description of error
According to "Overscan" page in Wikipedia, BBC officially suggested the overscan amounts as follows:

Title Safe
X: 10.0%
Y: 5.0%
Action Safe
X: 3.5%
Y: 3.5%

https://en.wikipedia.org/wiki/Overscan#Overscan_amounts

In Blender, however, the default values of Title Safe Margins and Action Safe Margins are:

Title Safe Margins
X: 0.035
Y: 0.035
Action Safe Margins
X: 0.100
Y: 0.050

These two margins have obviously switched values with each other.

Exact steps for others to reproduce the error
Steps to reproduce:

  • Start Blender
  • Select Camera in the default scene

See "Safe Areas" panel in Camera properties

Blender 2.79b:
camera_safe_margins_279.png

Blender 2.80:
camera_safe_margins_280.png

**System Information** Operating system: Ubuntu 18.10 Graphics card: Geforce GTX 1070 **Blender Version** Broken: 2.79b release and 2.80 afc4cd1e678b **Short description of error** According to "Overscan" page in Wikipedia, BBC officially suggested the overscan amounts as follows: Title Safe X: 10.0% Y: 5.0% Action Safe X: 3.5% Y: 3.5% https://en.wikipedia.org/wiki/Overscan#Overscan_amounts In Blender, however, the default values of Title Safe Margins and Action Safe Margins are: Title Safe Margins X: 0.035 Y: 0.035 Action Safe Margins X: 0.100 Y: 0.050 These two margins have obviously switched values with each other. **Exact steps for others to reproduce the error** Steps to reproduce: - Start Blender - Select Camera in the default scene # See "Safe Areas" panel in Camera properties Blender 2.79b: ![camera_safe_margins_279.png](https://archive.blender.org/developer/F5989180/camera_safe_margins_279.png) Blender 2.80: ![camera_safe_margins_280.png](https://archive.blender.org/developer/F5989182/camera_safe_margins_280.png)
Author
Member

Added subscriber: @IRIEShinsuke

Added subscriber: @IRIEShinsuke
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Jacques Lucke self-assigned this 2018-12-18 14:30:55 +01:00
Member
[D4097](https://archive.blender.org/developer/D4097)

This issue was referenced by 5fa749ace2

This issue was referenced by 5fa749ace29a60c1b0dd596c42973ac5e5cea28e
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59536
No description provided.