Fix T59536: safe area values were swapped

Reviewers: brecht

Differential Revision: https://developer.blender.org/D4097