source/blender/blenloader/intern/versioning_defaults.c
@@ -326,5 +326,7 @@ void BLO_update_defaults_startup_blend(Main *bmain, const char *app_template)
 
 	for (Scene *scene = bmain->scene.first; scene; scene = scene->id.next) {
 		copy_v3_v3(scene->display.light_direction, (float[3]){M_SQRT1_3, M_SQRT1_3, M_SQRT1_3});
+		copy_v2_fl2(scene->safe_areas.title, 0.1f, 0.05f);
+		copy_v2_fl2(scene->safe_areas.action, 0.035f, 0.035f);
 	}
 }
